<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_sleeptime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/textview_sleeptime_text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title_text"></TextView>





    <RadioGroup
        android:id="@+id/radiogroup_sleep_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radiobuttom_15s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:drawablePadding="8dp"
            android:text="@string/radiobutton_15s"
            android:textSize="@dimen/radiobutton_text_size" />

        <RadioButton
            android:id="@+id/radiobuttom_30s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:drawablePadding="8dp"
            android:text="@string/radiobutton_30s"
            android:textSize="@dimen/radiobutton_text_size" />

        <RadioButton
            android:id="@+id/radiobuttom_1m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:drawablePadding="8dp"
            android:text="@string/radiobutton_1m"
            android:textSize="@dimen/radiobutton_text_size" />

        <RadioButton
            android:id="@+id/radiobuttom_2m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:drawablePadding="8dp"
            android:text="@string/radiobutton_2m"
            android:textSize="@dimen/radiobutton_text_size" />

        <RadioButton
            android:id="@+id/radiobuttom_5m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:drawablePadding="8dp"
            android:text="@string/radiobutton_5m"
            android:textSize="@dimen/radiobutton_text_size" />

        <RadioButton
            android:id="@+id/radiobuttom_10m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:drawablePadding="8dp"
            android:text="@string/radiobutton_10m"
            android:textSize="@dimen/radiobutton_text_size" />

        <RadioButton
            android:id="@+id/radiobuttom_30m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:drawablePadding="8dp"
            android:text="@string/radiobutton_30m"
            android:textSize="@dimen/radiobutton_text_size" />
    </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/button_set_sleep_time"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/button_set_sleeptime_text" />
</LinearLayout>